meja/tests/if-then-condition-error.stderr
File "tests/if-then-condition-error.meja", line 2, characters 6-9:
Error: Incompatable types bool and int:
       Cannot unify bool and int
